[package]
name = "Vleue"
version = "0.1.0"
authors = ["François Mockers <mockersf@gmail.com>"]

[dependencies]
crowbar = { git = "https://github.com/mockersf/rust-crowbar", branch = "full", features = ["errorchain", "resulthelper"]}
#crowbar = { path = "../rust-crowbar", features = ["errorchain", "resulthelper"] }
cpython = { version = "*", default-features = false, features = ["python3-sys"] }

serde = "*"
serde_derive = "*"
serde_json = "*"
serde_urlencoded = "*"

error-chain = "*"
uuid = { version = "0.4", features = ["serde", "v4"] }
frank_jwt = "2.5.1"
time = "*"
http = "*"
mime = "*"

[lib]
name = "lambda"
crate-type = ["cdylib"]
